# chainsaw

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  sigma_organizer.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  v1.yml  v2.yml
analysis/: shimcache_patterns.txt
chainsaw_rules/account_tampering/: user_added_to_local_group.yml
chainsaw_rules/antivirus/: f-secure.yml.chainsaw  windows_defender.yml.chainsaw
chainsaw_rules/log_tampering/: system_log_was_cleared.yml.chainsaw
chainsaw_rules/service_tampering/: event_log.yml
e2e/: README.md  e2e.sh  hunt_expected.json  search_expected.yml
mapping_files/: sigma-mapping.yml
mappings/: sigma-cloudtrail-logs-all.yml  sigma-event-logs-all.yml  sigma-event-logs-legacy.yml  sigma-event-logs.yml  sigma-mft-logs-all.yml
rules/account_tampering/: new_user_created.yml  user_added_to_global_group.yml  user_added_to_local_group.yml  user_added_to_universal_group.yml
rules/antivirus/: f-secure.yml  f-secure_legacy.yml  kaspersky.yml  mcafee.yml  sophos.yml  symantec.yml  windows_defender.yml  windows_security_essentials.yml
rules/applocker/: eid_8002_applocker_lolbins_allowed_to_run.yml  eid_8002_applocker_reconnaissance_allowed.yml  eid_8002_lolbin_lateral_mouvement.yml  eid_8002_privilege_escalation.yml  eid_8004_applocker_exe-dll_blocked.yml  eid_8007_applocker_msi-script_blocked.yml
rules/credential_access/: kerberoasting_administrator.yml  weak_kerberos_ticket.yml
rules/defense_evasion/: T1562.001 - Sysmon Service set to Manual.yml  T1562.001 - Sysmon Service was Disabled.yml  disabled_sysmon_service.yml  manual_sysmon_service.yml
rules/indicator_removal/: T1070.009 - Scheduled Task was Deleted.yml
rules/lateral_movement/: T1021.004 - Lateral Movement via SSH.yml  batch_logon.yml  interactive_logon.yml  network_logon.yml  rdp_logon.yml  service_logon.yml  unlock_logon.yml
rules/log_tampering/: security_audit_log_was_cleared.yml  system_log_was_cleared.yml
rules/login_attacks/: account_brute_force.yml
rules/mft/: adamntds_dit_mft.yml  advanced_ip_scanner_mft.yml  advanced_port_scanner_mft.yml  angry_ip_scanner_mft.yml  anydesk_mft.yml  anyviewer_mft.yml  ateraagent_mft.yml  browserscan_mft.yml  filezilla_mft.yml  kslkatz_mft.yml  lazagne_mft.yml  lsass_dmp_mft.yml  megasync_mft.yml  meshagent_mft.yml  mimikatz_mft.yml  netexec_mft.yml  netscan_mft.yml  nirsoft_mft.yml  ntds_dit_mft.yml  procdump_mft.yml  processhacker_mft.yml  psexec_mft.yml  pstools_mft.yml  rclone_mft.yml  rubeus_mft.yml  scvhost_mft.yml  shadow_dumper_mft.yml  splashtop_mft.yml  sup_script_exec_intel_mft.yml  sup_script_exec_perflogs_mft.yml  sup_script_exec_program_files_root_mft.yml  sup_script_exec_programdata_mft.yml  sup_script_exec_public_mft.yml  sup_script_exec_recyclebin_mft.yml  sup_script_exec_recyclebin_nonstand_mft.yml  sup_script_exec_root_mft.yml  sup_script_exec_root_nonstand_fold_mft.yml  sup_script_exec_root_temp_mft.yml  sup_script_exec_rtlo_mft.yml  sup_script_exec_user_desktop_mft.yml  (+10 more)
rules/microsoft_rasvpn_events/: eid_20220_20227_rasvpn_client_connection_error.yml  eid_20221_to_20225_rasvpn_client_connection_establishment.yml  eid_20226_rasvpn_client_connection_termination.yml  eid_20250_20274_rasvpn_server_logon.yml  eid_20253_20255_connection_error.yml  eid_20271_rasvpn_server_authentication_error.yml  eid_20272_20275_rasvpn_server_logoff.yml
rules/persistence/: T1053.005 - Scheduled Task was Created.yml  T1547.004 - Winlogon System Shell Changed.yml
rules/powershell/: eid_400_powershell_engine_state_available.yml  eid_403_powershell_engine_state_stopped.yml  eid_4104_powershell_script_executed.yml
rules/rdp_attacks/: eid_21_rdp_session_logon_succeeded.yml  eid_22_file_explorer_shell_appeared_in_rdp_session.yml  eid_23_rdp_session_logoff.yml  eid_39_rdp_session_disconnected.yml  event_id_1149.yaml  event_id_25.yaml  event_id_4624_logontype_10.yaml
src/: check.rs  cli.rs  hunt.rs  lib.rs  main.rs  search.rs  timeline.rs  util.rs  value.rs  write.rs
tests/: clo.rs  common.rs  convert.rs
(+96 files in other folders)
