[package]
name = "chainsaw"
version = "2.6.1"
repository = "https://github.com/countercept/chainsaw"
description = "Rapidly Search and Hunt Through Windows Forensic Artefacts"
authors = ["James Dorgan <james@dorgan.io>","Alex Kornitzer <alex.kornitzer@withsecure.com>"]
readme = "README.md"
license = "GPL3"
edition = "2021"


[dependencies]
aho-corasick = "0.7"
anyhow = "1.0"
bincode = "1.3"
bytesize = "1.0"
chrono = "0.4"
chrono-tz = { version = "0.8", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
colour = "0.6"
evtx = "0.8"
indicatif = "0.17"
lazy_static = "1.4.0"
mft = "0.6"
notatin = { git = "https://github.com/strozfriedberg/notatin", rev = "9783169f4649c8df92f94b8c20421df8f4aa070a" }
once_cell = "1.0"
prettytable-rs = "0.10"
quick-xml = { version = "0.27", features = ["serialize"] }
rayon = "1.5"
regex = "1.6"
rustc-hash = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tau-engine = { version = "1.0", features = ["core", "json", "sync"] }
term_size = "0.3"
uuid = { version = "1.1", features = ["serde", "v4"] }


[dev-dependencies]
assert_cmd = "2.0"
paste = "1.0"
predicates = "2.1"
