[package]
name = "chainsaw"
version = "2.11.0"
repository = "https://github.com/WithSecureLabs/chainsaw"
description = "Rapidly Search and Hunt Through Windows Forensic Artefacts"
authors = ["James Dorgan <james@dorgan.io>","Alex Kornitzer <alex.kornitzer@withsecure.com>"]
readme = "README.md"
license = "GPL3"
edition = "2021"


[dependencies]
aho-corasick = "1.0"
anyhow = "1.0"
base64 = "0.22"
bincode = "1.3"
bytesize = "1.0"
chrono = "0.4"
chrono-tz = { version = "0.10", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.28"
evtx = "0.8"
hex = "0.4.3"
indicatif = "0.17"
lazy_static = "1.4.0"
libesedb = "0.2.4"
mft = "0.6"
notatin = "1.0"
once_cell = "1.0"
prettytable-rs = "0.10"
quick-xml = { version = "0.37", features = ["serialize"] }
rayon = "1.5"
rand = "0.8"
regex = "1.6"
rustc-hash = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_yaml = "0.9"
smallvec = "1.11"
tau-engine = { version = "1.0", features = ["core", "json", "sync"] }
tempfile = "3.2"
terminal_size = "0.4"
uuid = { version = "1.1", features = ["serde", "v4"] }


[dev-dependencies]
assert_cmd = "2.0"
paste = "1.0"
predicates = "3.0"
